<?xml version="1.0"?>
<package>
  <name>icart_mini_ros_pkgs</name>
  <version>0.0.1</version>
  <description>The icart_mini_ros_pkgs package</description>
  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>t_frog_driver</run_depend>
  <run_depend>t_frog_slam</run_depend>
  <run_depend>t_frog_gazebo</run_depend>
  <run_depend>t_frog_control</run_depend>
  <run_depend>t_frog_description</run_depend>
  <run_depend>t_frog_navigation</run_depend>

  <export>
    <metapackage/>
  </export>

</package>

