<?xml version="1.0"?>
<package>
  <name>icart_mini_ros_pkgs</name>
  <version>0.0.1</version>
  <description>The icart_mini_ros_pkgs package</description>
  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>icart_mini_driver</run_depend>
  <run_depend>icart_mini_gazebo</run_depend>
  <run_depend>icart_mini_control</run_depend>
  <run_depend>icart_mini_description</run_depend>
  <run_depend>icart_mini_navigation</run_depend>

  <export>
    <metapackage/>
  </export>

</package>

