<?xml version="1.0"?>
<package>
  <name>orne_bringup</name>
  <version>0.0.0</version>
  <description>The orne_bringup package</description>

  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>

  <license>BSD</license>

  <author email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>icart_mini_driver</build_depend>
  <build_depend>icart_mini_gazebo</build_depend>
  <run_depend>icart_mini_driver</run_depend>
  <run_depend>icart_mini_gazebo</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>velodyne</run_depend>

  <export>
  </export>
</package>
