<?xml version="1.0"?>
<package>
  <name>orne_navigation_executor</name>
  <version>0.1.3</version>
  <description>The orne_navigation_executor package</description>

  <maintainer email="method_aspect_card@yahoo.co.jp">Daiki Maekawa</maintainer>
  <author>Daiki Maekawa</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>map_server</build_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>amcl</run_depend>
  <export>
  </export>
</package>
