<package>
  <name>orne_rviz_plugins</name>
  <version>0.0.1</version>
  <description>
      The orne_rviz_plugins package
  </description>
  <maintainer email="d.maekawa@rapyuta-robotics.com">Daiki Maekawa</maintainer>
  <license>BSD</license>

  <author>Daiki Maekawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
